Extends MPL interface for DEVICE variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,34 @@ ecbuild_add_option( FEATURE WARNINGS
 
 ecbuild_find_package( NAME Realtime QUIET )
 
+
+
+ecbuild_find_package(OpenACC REQUIRED)
+ecbuild_add_option( FEATURE ACC  
+                    REQUIRED_PACKAGES "OpenACC COMPONENTS Fortran" 
+                    DEFAULT ON )
+
+enable_language( CUDA )
+ecbuild_find_package(CUDAToolkit REQUIRED)
+ecbuild_add_option( FEATURE GPU
+                    DEFAULT ON
+                    DESCRIPTION "Compile GPU version of fiat" )
+
+set( OpenACC_Fortran_FLAGS "-acc" )
+set( OpenACC_Fortran_FLAGS "${OpenACC_Fortran_FLAGS} -ta=tesla:lineinfo,deepcopy,fastmath" )
+set( OpenACC_Fortran_FLAGS "${OpenACC_Fortran_FLAGS} -Mcuda" )
+
+get_filename_component (CUDALIB ${CUDA_cublas_LIBRARY} DIRECTORY)
+set (CMAKE_Fortran_FLAGS_RELWITHDEBINFO "${CMAKE_Fortran_FLAGS_RELWITHDEBINFO} ${OpenACC_Fortran_FLAGS} -L${CUDALIB} -Wl,-rpath,${CUDALIB}")
+set (CMAKE_Fortran_FLAGS_RELWITHDEBINFO_INIT "${CMAKE_Fortran_FLAGS_RELWITHDEBINFO_INIT} ${OpenACC_Fortran_FLAGS} -L${CUDALIB} -Wl,-rpath,${CUDALIB}")
+
+#get_cmake_property(_variableNames VARIABLES)
+#list (SORT _variableNames)
+#foreach (_variableName ${_variableNames})
+#    message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
+
+
 ### Sources
 
 include( fiat_compiler_warnings )
